# streaming-remote

./: .editorconfig  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  LICENSE-MIT  README.md  handshake_protocol.md  rpc_protocol.md
.github/workflows/: ci.yml
com.fredemmott.streamingremote.sdPlugin/: app.html  manifest.json
js-client-lib/: package.json  tsconfig.json
js-client-lib/src/: Config.ts  CryptoState.ts  RPC.ts  Types.ts  Version.ts  Version.ts.in  handshake.ts  index.ts
native/: CMakeLists.txt
native/Core/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  Config.cpp  Config.h  Logger.cpp  Logger.h  MessageInterface.cpp  MessageInterface.h  Plugin.cpp  Plugin.h  Scene.cpp  Scene.h  Server.cpp  Server.h  Signal.cpp  Signal.h  StreamingSoftware.cpp  StreamingSoftware.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h  WebSocketConnection.cpp  WebSocketConnection.h  WebSocketServer.cpp  WebSocketServer.h
native/dummy/: CMakeLists.txt  Dummy.cpp  Dummy.h  main.cpp
native/obs/: CMakeLists.txt  OBS.cpp  OBS.h  OBSConfigDialog.cpp  OBSConfigDialog.h  OBS_GPLv2.cpp  libobs.cmake  plugin-main.cpp
native/xsplit/: CMakeLists.txt  IXSplitScriptDllContext.h  XSplit.cpp  XSplit.h  plugin-main.cpp  portability-stdcpp.h  portability-windows.cpp  portability-windows.h  portability.h  version.h.in
plugins/: CMakeLists.txt  CMakeSettings.json
plugins/Core/: CMakeLists.txt  ClientState.h  Config.cpp  Config.h  Logger.h  MessageInterface.h  Output.cpp  Output.h  Signal.h  StreamingSoftware.cpp  StreamingSoftware.h  TCPConnection.h  TCPServer.cpp  TCPServer.h  WebSocketServer.cpp  WebSocketServer.h  WebSocketTypes.h
plugins/base/: ClientHandler.cpp  ClientHandler.h  Config.cpp  Config.h  MessageInterface.cpp  MessageInterface.h  Output.cpp  Output.h  SocketMessageInterface.cpp  SocketMessageInterface.h  SocketServer.cpp  SocketServer.h  StreamingSoftware.cpp  StreamingSoftware.h  WebSocketMessageInterface.cpp  WebSocketMessageInterface.h
plugins/dummy/: main.cpp
plugins/obs/: CMakeLists.txt  OBS.cpp  OBS.h  OBSConfigDialog.cpp  OBSConfigDialog.h  libobs.cmake  plugin-main.cpp
plugins/xsplit/: CMakeLists.txt  IXSplitScriptDllContext.h  XSplit.cpp  XSplit.h  plugin-main.cpp  portability-stdcpp.cpp  portability.cpp  portability.h
plugins/xsplit/js/: index.css  index.html
plugins/xsplit/js/src/: StreamRemote.ts  configpage.ts  index.ts  plugin.ts
streamdeck-plugin/: app.html  babel.config.json  manifest.json  manifest.json.in  package.json  pi.html  tsconfig.json  webpack.config.js
streamdeck-plugin/keys/: index.html
streamdeck-plugin/property_inspector/: index.html
streamdeck-plugin/src/: ActionIDs.ts  ESDTypes.ts  EventIDs.ts  Images.ts  StartStopOutputAction.ts  StreamDeckAction.ts  StreamDeckPlugin.ts  StreamingRemoteClientAction.ts  StreamingRemotePlugin.ts  index.ts  pi_main.ts  pi_main.ts.ts  plugin_main.ts
streamdeck-plugin/src/pi/: PropertyInspector.ts  SetCurrentSceneActionPI.ts  StartStopActionPI.ts  sdpi_common.d.ts
streamdeck-plugin/src/plugin/: Images.ts  SetCurrentSceneAction.ts  StartStopOutputAction.ts  StreamDeckAction.ts  StreamDeckPlugin.ts  StreamingRemoteClientAction.ts  StreamingRemotePlugin.ts
webui/: index.html  package.json  site.css  tsconfig.json  webpack.config.js
webui/src/: ClientConfig.ts  ConfigStorage.ts  CryptoState.ts  RPCClient.ts  RPCTypes.ts  handshake.ts  index.ts  jslib.ts
xsplit-js-plugin/: index.html  index.xml  package.json  tsconfig.json  webpack.config.js
xsplit-js-plugin/src/: StreamRemote.ts  Version.ts  Version.ts.in  configpage.ts  plugin.ts
